

SWITCHwayf Changes and Version History:
1.18    - Changed default SessionInitiator of the Embedded WAYF to 
          /Login because this has been the default SessionInitiator in 
          Shibboleth for quite some time now.
        - Corrected viewport meta tag separator of default header as suggested
          by Andrew Sokolov from Saint Petersburg State University 
        - Removed as many SWITCH-specific graphics and texts as possible.
        - Introduced configuration options to allow easier customization.
        - Fixed a few small bugs
        - Added some optimizations to the drop-down list search-as-you type 
          feature
        - The log file now logs - if possible - also the SP entityID/providerId
        - Some small styling changes/CSS improvements
        
        Issues: https://forge.switch.ch/redmine/projects/wayf/versions/62
        Please read the specific update instructions in the README file, as some
        new configuration options were introduced that should be revised.

1.17.1  Release date:  14. June 2012
        - Fixed a bug occuring when wayf_sp_samlDSURL contains GET arguments
          Bug reported with a patch by Takeshi Nishimura from NII (Japan)
        - Fixed typo in configuration otpion useImprovedDropDownList
        - Added Javascripts required for improved drop down list
        
        Issues: https://forge.switch.ch/redmine/projects/wayf/versions/55

1.17    Release date:  18. May 2012
        - Added CSS styles for mobile view
        - Embedded WAYF now reads 'entityID' and 'return' GET arguments.
          They get precedence over the values configured for the Embedded WAYF.
        - Embedded WAYF logged in message now contains a link to target URL
        
        Issues: https://forge.switch.ch/redmine/projects/wayf/versions/45

1.16    Release date: 19. January 2012
        - Added an improved version of the drop down list to the WAYF
          Inspired by code from Takeshi Nishimura from NII (Japan)